# soarchain-contract-template

./: .gitignore  Makefile  README.md  docker-compose.yml
data-anonymization/: Cargo.toml
data-anonymization/src/: contract.rs  error.rs  helpers.rs  main.rs  msg.rs  state.rs  types.rs
data-qualify/: Cargo.toml
data-qualify/src/: contract.rs  error.rs  execute.rs  msg.rs  state.rs
road-usage-charge/: Cargo.toml
road-usage-charge/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs
scripts/: run_node.sh  stop_node.sh
