[package]
name = "data-anonymization"
version = "0.7.0"
authors = ["Golnar <golnar@soarrobotics.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
anyhow = "1"
hex = "0.4.3"
serde_json = "1.0"



[dev-dependencies]
